@@ -1,22 +1,23 @@
-/*
 package ru.hse.softwear.cinemaworld.userServer.service;
 
 import java.time.ZoneId;
-import java.util.AbstractMap;
-import java.util.Date;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
+import java.util.*;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.hse.softwear.cinemaworld.userServer.view.entity.Cinema;
 import ru.hse.softwear.cinemaworld.userServer.view.entity.Film;
 import ru.hse.softwear.cinemaworld.userServer.view.entity.Session;
+import ru.hse.softwear.cinemaworld.userServer.view.mapper.CinemaMapper;
+import ru.hse.softwear.cinemaworld.userServer.view.mapper.FilmMapper;
 import ru.hse.softwear.cinemaworld.userServer.view.mapper.SessionMapper;
+import ru.hse.softwear.cinemaworld.userServer.view.model.CinemaWithSessionModel;
 import ru.hse.softwear.cinemaworld.userServer.view.model.dbmodel.CinemaModel;
 import ru.hse.softwear.cinemaworld.userServer.view.model.dbmodel.FilmModel;
 import ru.hse.softwear.cinemaworld.userServer.view.model.dbmodel.SessionModel;
+import ru.hse.softwear.cinemaworld.userServer.view.repository.CinemaFilmRepository;
+import ru.hse.softwear.cinemaworld.userServer.view.repository.CinemaRepository;
 import ru.hse.softwear.cinemaworld.userServer.view.repository.FilmRepository;
 import ru.hse.softwear.cinemaworld.userServer.view.repository.SessionRepository;
 
@@ -27,35 +28,45 @@ public class FilmService {
 
     private final FilmRepository filmRepository;
     private final SessionRepository sessionRepository;
+    private final CinemaRepository cinemaRepository;
+    private final CinemaFilmRepository cinemaFilmRepository;
 
-    public AbstractMap.SimpleEntry<FilmModel, Map<CinemaModel, List<SessionModel>>> getFilm(Long id, Date date) {
+    public AbstractMap.SimpleEntry<FilmModel, List<CinemaWithSessionModel>> getFilm(Long id, Date date) {
         Film film = filmRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Film not found with id: " + id));
+                .orElseThrow(() -> new NoSuchElementException("Film not found with id: " + id));
 
-        List<Session> sessions = film.getSessions().stream()
-                .filter(session -> session.getDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate().equals(date.toInstant().atZone(ZoneId.systemDefault()).toLocalDate()))
-                .toList();
+        List<Long> cinemasId = cinemaFilmRepository.findByFilmId(id);
 
-        List<SessionModel> sessionModels = sessions.stream()
-                .map(sessionModel -> {
-                    return sessionRepository.findById(sessionModel.getId())
+        List<CinemaWithSessionModel> cinemasWithSessions = cinemasId.stream()
+                .map(cinemaId -> {
+                    Cinema cinema = cinemaRepository.findById(cinemaId).orElse(null);
+                    CinemaModel cinemaModel = CinemaMapper.INSTANCE.toModel(cinema);
+
+                    List<SessionModel> sessions = sessionRepository.findAllByFilmIdAndCinemaId(id, cinemaId).stream()
                             .map(SessionMapper.INSTANCE::toModel)
-                            .orElse(null);
+                            .toList();
+
+                    if(sessions.isEmpty()) {
+                        return null;
+                    }
+
+                    CinemaWithSessionModel cinemaWithSessionModel = new CinemaWithSessionModel();
+                    cinemaWithSessionModel.setCinema(cinemaModel);
+                    cinemaWithSessionModel.setSessions(sessions);
+
+                    return cinemaWithSessionModel;
                 })
-                .toList();
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
 
-        Map<CinemaModel, List<SessionModel>> cinemasWithSessions = sessionModels.stream()
-                .collect(Collectors.groupingBy(SessionModel::getCinema));
-
-        return new AbstractMap.SimpleEntry<>(FilmMapperWithoutDependency.INSTANCE.toModelWithoutDependency(film), cinemasWithSessions);
+        return new AbstractMap.SimpleEntry<>(FilmMapper.INSTANCE.toModel(film), cinemasWithSessions);
     }
 
     public String getTrailer(Long id) {
         Film film = filmRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("Film not found id: " + id));
 
-        return film.getTrailerURL();
+        return film.getTrailer();
     }
 
 }
-*/
